# cpp_examples

admission/: admission.cpp
associative_operation/: associative_operation.cpp  associative_operation.h
baby-threads/hash-table/: concurrent_hash_map.h
baby-threads/is-prime/: is_prime.cpp
baby-threads/reduce/: CMakeLists.txt  reduce.h
baby-threads/subset-sum/: find_subsets.cpp
bad-rand/solution/: run.cpp
condvars/buffered-channel/: CMakeLists.txt  buffered_channel.h
condvars/rw-lock/: CMakeLists.txt  rw_lock.h
condvars/semaphore/: sema.h
condvars/timerqueue/: timerqueue.h
condvars/unbuffered-channel/: CMakeLists.txt  unbuffered_channel.h
image_processor/: CMakeLists.txt  bmp_wr.cpp  bmp_wr.h  cmdcheckfunctions.cpp  cmdcheckfunctions.h  color.cpp  color.h  crop.cpp  crop.h  doublecolor.cpp  doublecolor.h  edge.cpp  edge.h  filter_template.h  gauss.cpp  gauss.h  grayscale.cpp  grayscale.h  image.cpp  image.h  image_processor.cpp  matrixfilter.cpp  matrixfilter.h  median.cpp  median.h  negative.cpp  negative.h  sharpening.cpp  sharpening.h  tester.cpp
image_processor/test_script/data/: mykey.txt
mines/: minesweeper.cpp  minesweeper.h
multiplication/: multiplication.cpp  multiplication.h
palindrome/: palindrome.cpp
password/: password.cpp
scorer/: scorer.cpp
scorer2/: scorer.cpp  scorer.h
search/: search.cpp
search2/: search.cpp  search.h
smart-ptrs/: CMakeLists.txt
sort_students/: sort_students.cpp
tests_checking/: tests_checking.cpp
unixpath/: unixpath.cpp
unixpath2/: unixpath.cpp  unixpath.h
word2vec/: word2vec.cpp
(+66 files in other folders)
